@@ -1,21 +1,16 @@
 package ladder.model;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Ladder {
-    private List<Line> lines;
+    private List<List<Boolean>> lines;
 
-    public Ladder(int width, int height, LinkConnector linkConnector) {
-        List<Line> lines = new ArrayList<>();
-        for (int i = 0; i < height; i++) {
-            lines.add(new Line(width, linkConnector));
-        }
-        this.lines = Collections.unmodifiableList(lines);
+    public Ladder(List<List<Boolean>> lines) {
+        this.lines = List.copyOf(lines);
     }
 
-    public List<Line> getLines() {
+    public List<List<Boolean>> getLines() {
         return List.copyOf(lines);
     }
+
 }
